Correction d'une erreur dans projectsContenair et dans la couleur des boutons de filtre pour la version mobile

--- a/src/assets/components/projectSection/ProjectSection.module.scss
+++ b/src/assets/components/projectSection/ProjectSection.module.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 4em;
-    padding: 0.5em;
+    gap: 3em;
+    padding: 1em;
     padding-bottom: 4em;
 }
